<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">healthDiary</string>
    <string name="userIdEdit">ID</string>
    <string name="passwordEdit">Password</string>
    <string name="loggingButton">Log In</string>
    <string name="loggingScreen">Logowanie</string>
    <string name="emptyString">""</string>
    <string name="haveAnAccount">Don\'t have an account?</string>
    <string name="registerNow">Register now!</string>
    <string name="registerUsername">Username</string>
    <string name="registerEmail">E-mail</string>
    <string name="registerPassword">Password</string>
    <string name="registerButton">Register</string>
    <string name="createAccount">Create an account</string>
    <string name="profile_name">Name</string>
    <string name="profile_surname">Last name</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_calories">Calories-a-day</string>
    <string name="profile_age">Age</string>
    <string name="create">Create</string>
    <string name="showProfile_name">Name:   </string>
    <string name="showProfile_surname">Surname:   </string>
    <string name="profile_nameEdit">Medium Text</string>
    <string name="profile_surnameEdit">Medium Text</string>
    <string name="profile_weightEdit">Small text</string>
    <string name="profile_ageEdit">Small text</string>
    <string name="profile_caloriesEdit">Small text</string>
    <string name="profile">Your profile</string>
</resources>
