<?xml version="1.0" encoding="utf-8"?>

<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:id="@+id/table">

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_name"
                android:id="@+id/textView2" android:layout_column="0" android:layout_marginRight="60dp"
                android:layout_marginLeft="20dp"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:inputType="textPersonName" android:id="@+id/profile_user_name"
                  android:ems="4"
                  android:layout_column="2"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_surname"
                android:id="@+id/textView3" android:layout_column="0" android:layout_marginLeft="20dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="6"
                android:id="@+id/profile_user_surname" android:layout_column="2"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/profile_weight"
                android:id="@+id/textView4" android:layout_column="0" android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="3"
                android:id="@+id/profile_user_weight" android:layout_column="2" android:layout_gravity="center_horizontal|left"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/profile_calories"
                      android:id="@+id/textView6" android:layout_column="0" android:layout_marginLeft="20dp"
                      android:layout_gravity="center_vertical"/>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:inputType="numberDecimal" android:ems="4" android:id="@+id/profile_user_calories"
                      android:layout_gravity="center_horizontal|left" android:layout_column="2"/>

    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/profile_age"
                  android:id="@+id/textView7" android:layout_column="0" android:layout_marginLeft="20dp"
                  android:layout_gravity="center_vertical" android:paddingRight="100dp"/>
        <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:inputType="numberDecimal" android:ems="2" android:id="@+id/profile_user_age"
                  android:layout_gravity="center_horizontal|left" android:layout_column="2"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_column="0">
        </GridLayout>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:id="@+id/profile_create_button" android:layout_column="2"/>
    </TableRow>
</TableLayout>